[gd_scene load_steps=14 format=4 uid="uid://ctuwehahwrfn7"]

[ext_resource type="Script" path="res://Help/help_4.gd" id="1_bg0a7"]
[ext_resource type="Texture2D" uid="uid://b7y2ygjt6ykgl" path="res://wizard.png" id="2_7nf4h"]
[ext_resource type="FontFile" uid="uid://3nh4snc06v0s" path="res://ARCADECLASSIC.TTF" id="3_jkomh"]
[ext_resource type="Texture2D" uid="uid://b78trcqxv1eru" path="res://0x72_DungeonTilesetII_v1.7/0x72_DungeonTilesetII_v1.7/0x72_DungeonTilesetII_v1.7.png" id="4_u8h7a"]
[ext_resource type="PackedScene" uid="uid://ne58scybf81e" path="res://Flag/flag.tscn" id="5_m83ai"]
[ext_resource type="PackedScene" uid="uid://d3nukcd1m5t47" path="res://Player/player.tscn" id="6_04mov"]
[ext_resource type="PackedScene" uid="uid://djh8gmmh27tqc" path="res://Enemy/enemy.tscn" id="7_yiet6"]
[ext_resource type="AudioStream" uid="uid://jdpeu08m8qil" path="res://Level2/error.mp3" id="8_ramhp"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ksx56"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nyf16"]
light_mode = 2

[sub_resource type="NavigationPolygon" id="NavigationPolygon_0ldxe"]
vertices = PackedVector2Array(4, 4, -4, 4, -4, -4, 4, -4)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ytl43"]
texture = ExtResource("4_u8h7a")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
13:0/0 = 0
16:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
23:2/0 = 0
24:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
1:4/0 = 0
1:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_0ldxe")
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
5:7/0 = 0
6:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
2:8/0 = 0
3:8/0 = 0
6:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
8:12/0 = 0
9:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
2:14/0 = 0
3:14/0 = 0
8:14/0 = 0
9:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
28:15/0 = 0
29:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
30:16/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
30:17/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
26:18/0 = 0
27:18/0 = 0
28:18/0 = 0
29:18/0 = 0
30:18/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
11:20/0 = 0
12:20/0 = 0
14:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
23:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
23:21/0 = 0
24:21/0 = 0
25:21/0 = 0
26:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
23:22/0 = 0
24:22/0 = 0
25:22/0 = 0
26:22/0 = 0
27:22/0 = 0
28:22/0 = 0
29:22/0 = 0
30:22/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
23:23/0 = 0
24:23/0 = 0
25:23/0 = 0
26:23/0 = 0
27:23/0 = 0
28:23/0 = 0
29:23/0 = 0
30:23/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
14:24/0 = 0
15:24/0 = 0
16:24/0 = 0
18:24/0 = 0
19:24/0 = 0
23:24/0 = 0
24:24/0 = 0
25:24/0 = 0
26:24/0 = 0
27:24/0 = 0
28:24/0 = 0
29:24/0 = 0
30:24/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
15:25/0 = 0
16:25/0 = 0
18:25/0 = 0
19:25/0 = 0
20:25/0 = 0
21:25/0 = 0
12:26/0 = 0
13:26/0 = 0
14:26/0 = 0
18:26/0 = 0
19:26/0 = 0
20:26/0 = 0
21:26/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
14:27/0 = 0
15:27/0 = 0
16:27/0 = 0
18:27/0 = 0
19:27/0 = 0
20:27/0 = 0
21:27/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
9:28/0 = 0
10:28/0 = 0
11:28/0 = 0
12:28/0 = 0
13:28/0 = 0
14:28/0 = 0
15:28/0 = 0
16:28/0 = 0

[sub_resource type="TileSet" id="TileSet_g3psg"]
physics_layer_0/collision_layer = 3
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_ytl43")

[node name="Help4" type="Node2D"]
script = ExtResource("1_bg0a7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 463.0
offset_bottom = 64.0

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_ksx56")
position = Vector2(403, 22)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_7nf4h")
flip_h = true

[node name="Label" type="Label" parent="."]
offset_left = 7.0
offset_top = 3.0
offset_right = 390.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jkomh")
theme_override_font_sizes/font_size = 12
text = "Press  SPACE   to  spend   some    luminance  to   place  a   temporary  decoy   
of  yours  to   confuse   ghosts  to  attack  the   clone  instead
They  just  attack  the   closest  wizard  or   decoy   so  stand   clear
Decoys   permanently    kill  ghosts    upon  impact"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
material = SubResource("CanvasItemMaterial_nyf16")
tile_map_data = PackedByteArray("AAAAAAcAAAACAAEAAAAAAAgAAAACAAEAAAAAAAkAAAACAAEAAAAAAAoAAAACAAEAAAAAAAsAAAACAAEAAAAAAAwAAAACAAEAAAAAAA0AAAACAAEAAAAAAA4AAAACAAEAAAAAAA8AAAACAAEAAAABAA8AAAACAAEAAAACAA8AAAACAAEAAAADAA8AAAACAAEAAAAEAA8AAAACAAEAAAAFAA8AAAACAAEAAAAGAA8AAAACAAEAAAAHAA8AAAACAAEAAAAIAA8AAAACAAEAAAAJAA8AAAACAAEAAAAKAA8AAAACAAEAAAALAA8AAAACAAEAAAAMAA8AAAACAAEAAAANAA8AAAACAAEAAAAOAA8AAAACAAEAAAAPAA8AAAACAAEAAAAQAA8AAAACAAEAAAARAA8AAAACAAEAAAASAA8AAAACAAEAAAATAAcAAAABAAQAAAATAAgAAAABAAQAAAATAAkAAAABAAQAAAATAAoAAAABAAQAAAATAAsAAAABAAQAAAATAAwAAAABAAQAAAATAA0AAAABAAQAAAATAA4AAAABAAQAAAATAA8AAAACAAEAAAAUAAcAAAABAAQAAAAUAAgAAAABAAQAAAAUAAkAAAABAAQAAAAUAAoAAAABAAQAAAAUAAsAAAABAAQAAAAUAAwAAAABAAQAAAAUAA0AAAABAAQAAAAUAA4AAAABAAQAAAAUAA8AAAACAAEAAAAVAAcAAAABAAQAAAAVAAgAAAABAAQAAAAVAAkAAAABAAQAAAAVAAoAAAABAAQAAAAVAAsAAAABAAQAAAAVAAwAAAABAAQAAAAVAA0AAAABAAQAAAAVAA4AAAABAAQAAAAVAA8AAAACAAEAAAAWAAcAAAABAAQAAAAWAAgAAAABAAQAAAAWAAkAAAABAAQAAAAWAAoAAAABAAQAAAAWAAsAAAABAAQAAAAWAAwAAAABAAQAAAAWAA0AAAABAAQAAAAWAA4AAAABAAQAAAAWAA8AAAACAAEAAAAXAAcAAAABAAQAAAAXAAgAAAABAAQAAAAXAAkAAAABAAQAAAAXAAoAAAABAAQAAAAXAAsAAAABAAQAAAAXAAwAAAABAAQAAAAXAA0AAAABAAQAAAAXAA4AAAABAAQAAAAXAA8AAAACAAEAAAAYAAcAAAABAAQAAAAYAAgAAAABAAQAAAAYAAkAAAABAAQAAAAYAAoAAAABAAQAAAAYAAsAAAABAAQAAAAYAAwAAAABAAQAAAAYAA0AAAABAAQAAAAYAA4AAAABAAQAAAAYAA8AAAACAAEAAAAZAAcAAAABAAQAAAAZAAgAAAABAAQAAAAZAAkAAAABAAQAAAAZAAoAAAABAAQAAAAZAAsAAAABAAQAAAAZAAwAAAABAAQAAAAZAA0AAAABAAQAAAAZAA4AAAABAAQAAAAZAA8AAAACAAEAAAAaAAcAAAABAAQAAAAaAAgAAAABAAQAAAAaAAkAAAABAAQAAAAaAAoAAAABAAQAAAAaAAsAAAABAAQAAAAaAAwAAAABAAQAAAAaAA0AAAABAAQAAAAaAA4AAAABAAQAAAAaAA8AAAACAAEAAAAbAAcAAAABAAQAAAAbAAgAAAABAAQAAAAbAAkAAAABAAQAAAAbAAoAAAABAAQAAAAbAAsAAAABAAQAAAAbAAwAAAABAAQAAAAbAA0AAAABAAQAAAAbAA4AAAABAAQAAAAbAA8AAAACAAEAAAAcAAcAAAACAAEAAAAcAAgAAAACAAEAAAAcAAkAAAACAAEAAAAcAAoAAAACAAEAAAAcAAsAAAACAAEAAAAcAAwAAAACAAEAAAAcAA0AAAACAAEAAAAcAA4AAAACAAEAAAAcAA8AAAACAAEAAAAAAAUAAAACAAEAAAAAAAYAAAACAAEAAAABAAUAAAABAAQAAAABAAYAAAABAAQAAAACAAUAAAABAAQAAAACAAYAAAABAAQAAAADAAUAAAABAAQAAAADAAYAAAABAAQAAAAEAAUAAAABAAQAAAAEAAYAAAABAAQAAAAFAAUAAAABAAQAAAAFAAYAAAABAAQAAAAGAAUAAAABAAQAAAAGAAYAAAABAAQAAAAHAAUAAAABAAQAAAAHAAYAAAABAAQAAAAIAAUAAAABAAQAAAAIAAYAAAABAAQAAAALAAUAAAABAAQAAAALAAYAAAABAAQAAAAMAAUAAAABAAQAAAAMAAYAAAABAAQAAAANAAUAAAABAAQAAAANAAYAAAABAAQAAAAOAAUAAAABAAQAAAAOAAYAAAABAAQAAAAPAAUAAAABAAQAAAAPAAYAAAABAAQAAAAQAAUAAAABAAQAAAAQAAYAAAABAAQAAAARAAUAAAABAAQAAAARAAYAAAABAAQAAAASAAUAAAABAAQAAAASAAYAAAABAAQAAAATAAUAAAABAAQAAAATAAYAAAABAAQAAAAUAAUAAAABAAQAAAAUAAYAAAABAAQAAAAVAAUAAAABAAQAAAAVAAYAAAABAAQAAAAWAAUAAAABAAQAAAAWAAYAAAABAAQAAAAXAAUAAAABAAQAAAAXAAYAAAABAAQAAAAYAAUAAAABAAQAAAAYAAYAAAABAAQAAAAZAAUAAAABAAQAAAAZAAYAAAABAAQAAAAaAAUAAAABAAQAAAAaAAYAAAABAAQAAAAbAAUAAAABAAQAAAAbAAYAAAABAAQAAAAcAAUAAAACAAEAAAAcAAYAAAACAAEAAAABAAcAAAABAAQAAAABAAgAAAABAAQAAAABAAkAAAABAAQAAAABAAoAAAABAAQAAAABAAsAAAABAAQAAAABAAwAAAABAAQAAAABAA0AAAABAAQAAAABAA4AAAABAAQAAAACAAcAAAABAAQAAAACAAgAAAABAAQAAAACAAkAAAABAAQAAAACAAoAAAABAAQAAAACAAsAAAABAAQAAAACAAwAAAABAAQAAAACAA0AAAABAAQAAAACAA4AAAABAAQAAAADAAcAAAABAAQAAAADAAgAAAABAAQAAAADAAkAAAABAAQAAAADAAoAAAABAAQAAAADAAsAAAABAAQAAAADAAwAAAABAAQAAAADAA0AAAABAAQAAAADAA4AAAABAAQAAAAEAAcAAAABAAQAAAAEAAgAAAABAAQAAAAEAAkAAAABAAQAAAAEAAoAAAABAAQAAAAEAAsAAAABAAQAAAAEAAwAAAABAAQAAAAEAA0AAAABAAQAAAAEAA4AAAABAAQAAAAFAAcAAAABAAQAAAAFAAgAAAABAAQAAAAFAAkAAAABAAQAAAAFAAoAAAABAAQAAAAFAAsAAAABAAQAAAAFAAwAAAABAAQAAAAFAA0AAAABAAQAAAAFAA4AAAABAAQAAAAGAAcAAAABAAQAAAAGAAgAAAABAAQAAAAGAAkAAAABAAQAAAAGAAoAAAABAAQAAAAGAAsAAAABAAQAAAAGAAwAAAABAAQAAAAGAA0AAAABAAQAAAAGAA4AAAABAAQAAAAHAAcAAAABAAQAAAAHAAgAAAABAAQAAAAHAAkAAAABAAQAAAAHAAoAAAABAAQAAAAHAAsAAAABAAQAAAAHAAwAAAABAAQAAAAHAA0AAAABAAQAAAAHAA4AAAABAAQAAAAIAAcAAAABAAQAAAAIAAgAAAABAAQAAAAIAAkAAAABAAQAAAAIAAoAAAABAAQAAAAIAAsAAAABAAQAAAAIAAwAAAABAAQAAAAIAA0AAAABAAQAAAAIAA4AAAABAAQAAAAJAAsAAAACAAEAAAAJAAwAAAACAAEAAAAJAA0AAAABAAQAAAAJAA4AAAABAAQAAAAKAAgAAAABAAQAAAAKAAkAAAABAAQAAAAKAAoAAAABAAQAAAAKAAsAAAABAAQAAAAKAAwAAAACAAEAAAAKAA0AAAABAAQAAAAKAA4AAAABAAQAAAALAAcAAAABAAQAAAALAAgAAAABAAQAAAALAAkAAAABAAQAAAALAAoAAAABAAQAAAALAAsAAAABAAQAAAALAAwAAAACAAEAAAALAA0AAAABAAQAAAALAA4AAAABAAQAAAAMAAwAAAACAAEAAAAMAA0AAAABAAQAAAAMAA4AAAABAAQAAAANAAcAAAABAAQAAAANAAsAAAABAAQAAAANAAwAAAACAAEAAAANAA0AAAABAAQAAAANAA4AAAABAAQAAAAOAAcAAAABAAQAAAAOAAgAAAABAAQAAAAOAAkAAAABAAQAAAAOAAoAAAABAAQAAAAOAA0AAAABAAQAAAAOAA4AAAABAAQAAAAPAAcAAAABAAQAAAAPAAgAAAABAAQAAAAPAAkAAAABAAQAAAAPAAoAAAABAAQAAAAPAAsAAAABAAQAAAAPAAwAAAABAAQAAAAPAA0AAAACAAEAAAAPAA4AAAACAAEAAAAQAAcAAAABAAQAAAAQAAgAAAABAAQAAAAQAAkAAAABAAQAAAAQAAoAAAABAAQAAAAQAAsAAAABAAQAAAAQAAwAAAABAAQAAAAQAA0AAAABAAQAAAAQAA4AAAABAAQAAAARAAcAAAABAAQAAAARAAgAAAABAAQAAAARAAkAAAABAAQAAAARAAoAAAABAAQAAAARAAsAAAABAAQAAAARAAwAAAABAAQAAAARAA0AAAABAAQAAAARAA4AAAABAAQAAAASAAcAAAABAAQAAAASAAgAAAABAAQAAAASAAkAAAABAAQAAAASAAoAAAABAAQAAAASAAsAAAABAAQAAAASAAwAAAABAAQAAAASAA0AAAABAAQAAAASAA4AAAABAAQAAAAKAAUAAAABAAQAAAAKAAYAAAABAAQAAAAKAAcAAAABAAQAAAAJAAUAAAACAAEAAAAJAAYAAAACAAEAAAAJAAcAAAACAAEAAAAJAAgAAAACAAEAAAAJAAkAAAACAAEAAAAJAAoAAAACAAEAAAANAAgAAAABAAQAAAANAAkAAAABAAQAAAANAAoAAAABAAQAAAAOAAsAAAABAAQAAAAOAAwAAAABAAQAAAAMAAcAAAABAAQAAAAMAAgAAAABAAQAAAAMAAkAAAABAAQAAAAMAAoAAAABAAQAAAAMAAsAAAABAAQAAAAAAAQAAAABAAEAAAABAAQAAAABAAEAAAACAAQAAAABAAEAAAADAAQAAAABAAEAAAAEAAQAAAABAAEAAAAFAAQAAAABAAEAAAAGAAQAAAABAAEAAAAHAAQAAAABAAEAAAAIAAQAAAABAAEAAAAJAAQAAAABAAEAAAAKAAQAAAABAAEAAAALAAQAAAABAAEAAAAMAAQAAAABAAEAAAANAAQAAAABAAEAAAAOAAQAAAABAAEAAAAPAAQAAAABAAEAAAAQAAQAAAABAAEAAAARAAQAAAABAAEAAAASAAQAAAABAAEAAAATAAQAAAABAAEAAAAUAAQAAAABAAEAAAAVAAQAAAABAAEAAAAWAAQAAAABAAEAAAAXAAQAAAABAAEAAAAYAAQAAAABAAEAAAAZAAQAAAABAAEAAAAaAAQAAAABAAEAAAAbAAQAAAABAAEAAAAcAAQAAAABAAEAAAA=")
tile_set = SubResource("TileSet_g3psg")

[node name="Flag" parent="." instance=ExtResource("5_m83ai")]
position = Vector2(429, 212)

[node name="Wizards" type="Node" parent="."]

[node name="Player" parent="Wizards" instance=ExtResource("6_04mov")]
position = Vector2(35, 110)
ENEMY_DAMAGE = 50
DECOY_COST = 20
mana = 100.0

[node name="Enemy" parent="." node_paths=PackedStringArray("player", "wizards") instance=ExtResource("7_yiet6")]
position = Vector2(184, 222)
SPEED = 1500.0
player = NodePath("../Wizards/Player")
wizards = NodePath("../Wizards")
respawn = false

[node name="NotEnoughMana" type="Node" parent="."]

[node name="Label" type="Label" parent="NotEnoughMana"]
visible = false
offset_left = 141.0
offset_top = 236.0
offset_right = 312.0
offset_bottom = 259.0
theme_override_colors/font_color = Color(0.788235, 0.180392, 0.0901961, 1)
theme_override_fonts/font = ExtResource("3_jkomh")
text = "Not  enough    luminance"

[node name="NotEnoughManaDisplayTimer" type="Timer" parent="NotEnoughMana"]
wait_time = 0.1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="NotEnoughMana"]
stream = ExtResource("8_ramhp")
volume_db = -20.0

[node name="Button" type="Button" parent="."]
offset_left = 419.0
offset_right = 463.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("3_jkomh")
text = "Exit"

[connection signal="flag_captured" from="Flag" to="." method="_on_flag_flag_captured"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
